# transcode

./: 1.avi  CMakeLists.txt  README.md  audio_decoder.cpp  audio_decoder.h  audio_encoder.cpp  audio_encoder.h  audio_filter.cpp  audio_filter.h  buffer.cpp  buffer.h  demuxer.cpp  demuxer.h  gl.cpp  gl.h  muxer.cpp  muxer.h  queue.cpp  queue.h  run.sh  transcode.cpp  video_decoder.cpp  video_decoder.h  video_encoder.cpp  video_encoder.h
